--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 FACEBOOK_ID=SKIP
 FACEBOOK_SECRET=SKIP
-FACEBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
-SESSION_SECRET=ThisIsMySecret
+FACEBOOK_CALLBACK=SKIP
+SESSION_SECRET=SKIP
 PORT=3000
